Bundle the JRE in the EXE